# Aiqyn

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  aiqyn.spec  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: default.toml
data/: ai_phrases_ru.json  sentiment_ru.json
docker/: Dockerfile.cpu  Dockerfile.cuda  docker-compose.yml
scripts/: download_assets.sh
src/aiqyn/: __init__.py  __main__.py  config.py  logging.py  schemas.py
src/aiqyn/api/: __init__.py  app.py  models.py
src/aiqyn/cli/: main.py
src/aiqyn/core/: aggregator.py  analyzer.py  calibrator.py  pipeline.py  preprocessor.py  segmenter.py
src/aiqyn/extractors/: base.py  f01_perplexity.py  f02_burstiness.py  f03_token_entropy.py  f04_lexical_diversity.py  f05_ngram_frequency.py  f06_parse_tree_depth.py  f07_sentence_length.py  f08_punctuation_patterns.py  f09_paragraph_structure.py  f10_ai_phrases.py  f11_emotional_neutrality.py  f12_coherence_smoothness.py  f13_weak_specificity.py  f14_token_rank.py  f15_style_consistency.py  f16_binoculars.py  f17_rubert.py  registry.py
src/aiqyn/models/: manager.py  ollama_runner.py
src/aiqyn/reports/: pdf_exporter.py
src/aiqyn/storage/: database.py
src/aiqyn/ui/: app.py  theme.py
src/aiqyn/utils/: __init__.py  file_reader.py
tests/: conftest.py
tests/integration/: test_pipeline.py  test_pipeline_no_llm.py
tests/unit/: test_aggregator.py  test_calibrator.py  test_file_reader.py  test_history.py  test_preprocessor.py  test_schemas_confidence.py  test_segmenter.py
(+29 files in other folders)
