[project]
name = "aiqyn"
version = "0.1.0"
requires-python = ">=3.12"
description = "Offline AI-generated text detector for Russian language"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "razdel>=0.5",
    "typer>=0.12",
    "httpx>=0.28.1",
    "pyside6>=6.7",
    "aiosqlite>=0.20",
    "reportlab>=4.2",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
    "sentence-transformers>=3.0",
]
llm = [
    "llama-cpp-python>=0.2.80",
]
ui = [
    "PySide6>=6.7",
    "reportlab>=4.2",
]
db = [
    "aiosqlite>=0.20",
]
ml = [
    "lightgbm>=4.3",
    "scipy>=1.13",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = ["aiqyn[nlp,llm,ui,db,ml]"]

[project.scripts]
aiqyn = "aiqyn.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiqyn"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["aiqyn"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
